final project Mercari Price Prediction

--- a/Capstone Proposal Template Latex/sections/Benchmark.tex
+++ b/Capstone Proposal Template Latex/sections/Benchmark.tex
@@ -1,4 +1,3 @@
 \section{Benchmark}
-(approximately 1-2 paragraphs)
 
-In this section, provide the details for a benchmark model or result that relates to the domain, problem statement, and intended solution. Ideally, the benchmark model or result contextualizes existing methods or known information in the domain and problem given, which could then be objectively compared to the solution. Describe how the benchmark model or result is measurable (can be measured by some metric and clearly observed) with thorough detail.
+Based on the literature found, the techniques that can be implemented with reliable results are 3: Decision trees regression, linear regression, and recurrent neural networks(RNN). Besides this supervised learning algorithms, I would like to try support vector regressions(SVR). These models have to be compared based on the evaluation metric, which is the Root Mean Squared Logarithmic Error(RMSLE), explained in the next section.
